--- a/package.json
+++ b/package.json
@@ -12,12 +12,20 @@
     "url": "https://github.com/fpapado/eleventy-with-vite"
   },
   "main": "index.js",
-  "dependencies": {},
   "devDependencies": {
     "@11ty/eleventy": "^0.12.1",
+    "@11ty/eleventy-cache-assets": "^2.2.1",
+    "@11ty/eleventy-img": "^0.9.0",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.1",
     "@vitejs/plugin-legacy": "^1.3.2",
     "concurrently": "^6.0.0",
+    "markdown-it-attrs": "^4.0.0",
+    "markdown-it-footnote": "^3.0.3",
+    "postcss": "^8.3.0",
+    "postcss-import": "^14.0.2",
+    "postcss-nested": "^5.0.5",
     "serve": "^11.3.2",
+    "tailwindcss": "^2.1.2",
     "vite": "^2.1.3"
   },
   "scripts": {
@@ -28,5 +36,8 @@
     "build:eleventy": "NODE_ENV=production eleventy",
     "build:vite": "NODE_ENV=production vite build",
     "prod": "NODE_ENV=production npm run build && serve _site"
+  },
+  "dependencies": {
+    "@11ty/eleventy-plugin-rss": "^1.1.1"
   }
 }
