--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@11ty/eleventy-img": "^0.9.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.1",
     "@vitejs/plugin-legacy": "^1.3.2",
+    "autoprefixer": "^10.2.6",
     "concurrently": "^6.0.0",
     "markdown-it-attrs": "^4.0.0",
     "markdown-it-footnote": "^3.0.3",
