--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@11ty/eleventy-cache-assets": "^2.2.1",
     "@11ty/eleventy-img": "^0.9.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.1",
+    "@imgix/js-core": "^3.1.3",
     "@vitejs/plugin-legacy": "^1.3.2",
     "autoprefixer": "^10.2.6",
     "concurrently": "^6.0.0",
+    "lodash": "^4.17.21",
     "markdown-it-attrs": "^4.0.0",
     "markdown-it-footnote": "^3.0.3",
     "postcss": "^8.3.0",
@@ -39,6 +41,8 @@
     "prod": "NODE_ENV=production npm run build && serve _site"
   },
   "dependencies": {
-    "@11ty/eleventy-plugin-rss": "^1.1.1"
+    "@11ty/eleventy-plugin-rss": "^1.1.1",
+    "imgix.js": "^3.5.0",
+    "lazysizes": "^5.3.2"
   }
 }
