--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "^10.2.6",
     "concurrently": "^6.0.0",
     "lodash": "^4.17.21",
+    "luxon": "^1.27.0",
     "markdown-it-attrs": "^4.0.0",
     "markdown-it-footnote": "^3.0.3",
     "postcss": "^8.3.0",
