--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@imgix/js-core": "^3.1.3",
     "@vitejs/plugin-legacy": "^1.3.2",
     "autoprefixer": "^10.2.6",
+    "axios": "^0.21.1",
     "concurrently": "^6.0.0",
     "lodash": "^4.17.21",
     "luxon": "^1.27.0",
