--- a/package.json
+++ b/package.json
@@ -17,11 +17,17 @@
     "@11ty/eleventy-cache-assets": "^2.2.1",
     "@11ty/eleventy-img": "^0.9.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.1",
+    "@11ty/eleventy-plugin-vue": "^0.3.1",
     "@imgix/js-core": "^3.1.3",
     "@vitejs/plugin-legacy": "^1.3.2",
     "autoprefixer": "^10.2.6",
     "axios": "^0.21.1",
+    "cheerio": "*",
+    "classnames": "^2.3.1",
     "concurrently": "^6.0.0",
+    "eleventy-plugin-images-responsiver": "^1.8.2",
+    "image-size": "^0.9.7",
+    "jsdom": "^16.6.0",
     "lodash": "^4.17.21",
     "luxon": "^1.27.0",
     "markdown-it-attrs": "^4.0.0",
@@ -29,6 +35,8 @@
     "postcss": "^8.3.0",
     "postcss-import": "^14.0.2",
     "postcss-nested": "^5.0.5",
+    "posthtml": "^0.15.2",
+    "prevent-widows": "^1.0.2",
     "serve": "^11.3.2",
     "tailwindcss": "^2.1.2",
     "vite": "^2.1.3"
