--- a/package.json
+++ b/package.json
@@ -18,16 +18,20 @@
     "@11ty/eleventy-img": "^0.9.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.1",
     "@11ty/eleventy-plugin-vue": "^0.3.1",
+    "@cloudinary/base": "*",
     "@imgix/js-core": "^3.1.3",
     "@vitejs/plugin-legacy": "^1.3.2",
     "autoprefixer": "^10.2.6",
     "axios": "^0.21.1",
     "cheerio": "*",
     "classnames": "^2.3.1",
+    "cloudinary": "^1.25.2",
+    "cloudinary-core": "^2.11.4",
     "concurrently": "^6.0.0",
     "dotenv": "^10.0.0",
     "eleventy-plugin-images-responsiver": "^1.8.2",
     "image-size": "^0.9.7",
+    "jest": "^26.6.3",
     "jsdom": "^16.6.0",
     "lodash": "^4.17.21",
     "luxon": "^1.27.0",
