--- a/package.json
+++ b/package.json
@@ -23,14 +23,12 @@
     "@vitejs/plugin-legacy": "^1.3.2",
     "autoprefixer": "^10.2.6",
     "axios": "^0.21.1",
-    "cheerio": "*",
     "classnames": "^2.3.1",
     "cloudinary": "^1.25.2",
     "cloudinary-core": "^2.11.4",
     "concurrently": "^6.0.0",
     "dotenv": "^10.0.0",
-    "eleventy-plugin-images-responsiver": "^1.8.2",
-    "image-size": "^0.9.7",
+    "graphql": "^15.5.0",
     "jest": "^26.6.3",
     "jsdom": "^16.6.0",
     "lodash": "^4.17.21",
@@ -41,7 +39,6 @@
     "postcss-import": "^14.0.2",
     "postcss-nested": "^5.0.5",
     "posthtml": "^0.15.2",
-    "prevent-widows": "^1.0.2",
     "serve": "^11.3.2",
     "tailwindcss": "^2.1.2",
     "vite": "^2.1.3"
