--- a/netlify.toml
+++ b/netlify.toml
@@ -14,6 +14,11 @@
   ELEVENTY_EXPERIMENTAL = "true"
 
 [[redirects]]
+  from = "/feed"
+  to = "/feed.xml"
+  status = 301
+
+[[redirects]]
   from = "https://demaree.me/*"
   to = "https://demaree.space/:splat"
   status = 301
@@ -27,8 +32,8 @@
 
 [[redirects]]
   from = "/*"
-  to = "/p/:splat"
-  status = 301
+  to = "404.html"
+  status = 404
 
 [dev]
   framework = "#custom"
