--- a/netlify.toml
+++ b/netlify.toml
@@ -19,6 +19,11 @@
   status = 301
 
 [[redirects]]
+  from = "/posts"
+  to = "/articles"
+  status = 301
+
+[[redirects]]
   from = "https://demaree.me/*"
   to = "https://demaree.space/:splat"
   status = 301
@@ -29,11 +34,6 @@
   to = "https://demaree.space/"
   status = 301
   force = true
-
-[[redirects]]
-  from = "/*"
-  to = "404.html"
-  status = 404
 
 [dev]
   framework = "#custom"
