--- a/static/cm/config.yml
+++ b/static/cm/config.yml
@@ -2,7 +2,7 @@ backend:
   name: git-gateway
   branch: main
 
-# publish_mode: editorial_workflow
+publish_mode: editorial_workflow
 media_folder: 'src/assets/images/posts' # Media files will be stored in the repo under src/assets/images/posts
 public_folder: '/assets/images/posts' # The src attribute for uploaded media will begin with assets/images/posts
 
@@ -16,8 +16,8 @@ collections:
       preview: false # Disable the editor preview and use instead 'preview links'
     fields: # The fields for each document, usually in front matter
       - { name: "title", label: "Title" }
-      - { name: "description", label: "Description" }
       - { name: "date", label: "Date", widget: "datetime" }
+      - { name: "description", label: "Description" }
       - { name: "body", label: "Body", widget: "markdown" }
   - name: "config"
     label: "Configuration"
