--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "lazysizes": "^5.3.2",
     "lodash": "^4.17.21",
     "luxon": "^1.27.0",
+    "netlify-plugin-cache-nextjs": "^1.6.1",
     "next": "^11.0.0",
     "postcss": "^8.3.0",
     "postcss-import": "^14.0.2",
