--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,23 @@
-node_modules
-.DS_Store
+# build output
 dist
-dist-ssr
-*.local
-_site
-.cache
-.env
 
+# dependencies
+node_modules/
+.snowpack/
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# environment variables
+.env
+.env.production
+
+# macOS-specific files
+.DS_Store
+
+# Local Vercel folder
 .vercel
 
 # Local Netlify folder
