--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   },
   "main": "index.js",
   "devDependencies": {
-    "@11ty/eleventy": "^0.12.1",
+    "@11ty/eleventy": "^1.0.0-beta.8",
     "@11ty/eleventy-cache-assets": "^2.2.1",
     "@11ty/eleventy-img": "^0.9.0",
+    "@11ty/eleventy-plugin-rss": "^1.1.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.1",
-    "@11ty/eleventy-plugin-vue": "^0.3.1",
-    "@cloudinary/base": "*",
+    "@11ty/eleventy-plugin-vue": "^0.6.0",
+    "@cloudinary/url-gen": "^1.2.0",
     "@imgix/js-core": "^3.1.3",
-    "@vitejs/plugin-legacy": "^1.3.2",
+    "@vitejs/plugin-legacy": "^1.6.3",
     "autoprefixer": "^10.2.6",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
@@ -35,27 +36,27 @@
     "luxon": "^1.27.0",
     "markdown-it-attrs": "^4.0.0",
     "markdown-it-footnote": "^3.0.3",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.3.0",
     "postcss-import": "^14.0.2",
     "postcss-nested": "^5.0.5",
     "posthtml": "^0.15.2",
     "serve": "^11.3.2",
     "tailwindcss": "^2.1.2",
-    "vite": "^2.1.3"
+    "vite": "^2.6.14",
+    "clean-css": "^4.2.3",
+    "imgix.js": "^3.5.0",
+    "lazysizes": "^5.3.2"
   },
   "scripts": {
-    "dev": "concurrently npm:dev:*",
+    "dev": "run-p dev:*",
     "dev:eleventy": "eleventy --serve",
     "dev:vite": "vite",
-    "build": "npm run build:vite && npm run build:eleventy",
+    "build": "run-s build:vite build:eleventy",
     "build:eleventy": "NODE_ENV=production eleventy",
     "build:vite": "NODE_ENV=production vite build",
     "prod": "NODE_ENV=production npm run build && serve _site"
   },
   "dependencies": {
-    "@11ty/eleventy-plugin-rss": "^1.1.1",
-    "clean-css": "^4.2.3",
-    "imgix.js": "^3.5.0",
-    "lazysizes": "^5.3.2"
   }
 }
