--- a/package.json
+++ b/package.json
@@ -25,13 +25,18 @@
     "autoprefixer": "^10.2.6",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
+    "clean-css": "^4.2.3",
     "cloudinary": "^1.25.2",
     "cloudinary-core": "^2.11.4",
     "concurrently": "^6.0.0",
+    "connect": "^3.7.0",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "graphql": "^15.5.0",
+    "imgix.js": "^3.5.0",
     "jest": "^26.6.3",
     "jsdom": "^16.6.0",
+    "lazysizes": "^5.3.2",
     "lodash": "^4.17.21",
     "luxon": "^1.27.0",
     "markdown-it-attrs": "^4.0.0",
@@ -42,21 +47,18 @@
     "postcss-nested": "^5.0.5",
     "posthtml": "^0.15.2",
     "serve": "^11.3.2",
+    "serve-handler": "^6.1.3",
+    "sirv": "^1.0.19",
     "tailwindcss": "^2.1.2",
-    "vite": "^2.6.14",
-    "clean-css": "^4.2.3",
-    "imgix.js": "^3.5.0",
-    "lazysizes": "^5.3.2"
+    "vite": "^2.6.14"
   },
   "scripts": {
     "dev": "run-p dev:*",
-    "dev:eleventy": "eleventy --serve",
+    "dev:eleventy": "eleventy --watch",
     "dev:vite": "vite",
-    "build": "run-s build:vite build:eleventy",
-    "build:eleventy": "NODE_ENV=production eleventy",
-    "build:vite": "NODE_ENV=production vite build",
-    "prod": "NODE_ENV=production npm run build && serve _site"
+    "build": "NODE_ENV=production run-s build:eleventy build:vite",
+    "build:eleventy": "eleventy",
+    "build:vite": "vite build"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
