--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ddemaree/website",
+  "name": "@example/starter",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -9,18 +9,32 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "@astrojs/renderer-preact": "^0.3.0",
-    "@astrojs/renderer-react": "^0.3.0",
-    "@astrojs/renderer-vue": "^0.2.0",
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/fontawesome-pro": "^6.0.0-beta3",
+    "@fortawesome/fontawesome-svg-core": "^1.3.0-beta3",
+    "@fortawesome/free-brands-svg-icons": "^6.0.0-beta3",
+    "@fortawesome/free-regular-svg-icons": "^6.0.0-beta3",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0-beta3",
     "@fortawesome/react-fontawesome": "^0.1.16",
-    "astro": "^0.21.4",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "@fullhuman/postcss-purgecss": "^4.1.3",
+    "@types/react": "^17.0.38",
+    "astro": "^0.22.18",
+    "autoprefixer": "^10.4.2",
     "classnames": "^2.3.1",
-    "postcss": "^8.4.0",
+    "cloudinary": "^1.28.1",
+    "gray-matter": "^4.0.3",
+    "lodash": "^4.17.21",
+    "luxon": "^2.3.0",
+    "postcss": "^8.3.11",
     "postcss-import": "^14.0.2",
-    "tailwindcss": "^2.2.19"
-  }
+    "postcss-import-url": "^7.0.0",
+    "postcss-lab-function": "^4.0.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "tailwindcss": "^3.0.15",
+    "turndown": "^7.1.1",
+    "xml2js": "^0.4.23"
+  },
+  "dependencies": {}
 }
