--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@example/starter",
-  "version": "0.0.1",
+  "name": "@ddemaree/website",
+  "version": "22.0.0.beta.1",
   "private": true,
   "scripts": {
     "dev": "astro dev",
@@ -9,7 +9,6 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-pro": "^6.0.0-beta3",
     "@fortawesome/fontawesome-svg-core": "^1.3.0-beta3",
     "@fortawesome/free-brands-svg-icons": "^6.0.0-beta3",
     "@fortawesome/free-regular-svg-icons": "^6.0.0-beta3",
@@ -17,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@fullhuman/postcss-purgecss": "^4.1.3",
+    "@tsconfig/svelte": "^3.0.0",
     "@types/react": "^17.0.38",
     "astro": "^0.22.18",
     "autoprefixer": "^10.4.2",
@@ -25,6 +25,7 @@
     "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
     "luxon": "^2.3.0",
+    "petite-vue": "^0.4.1",
     "postcss": "^8.3.11",
     "postcss-import": "^14.0.2",
     "postcss-import-url": "^7.0.0",
@@ -32,6 +33,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "svelte": "^3.46.3",
+    "svelte-portal": "^2.1.2",
     "tailwindcss": "^3.0.15",
     "turndown": "^7.1.1",
     "xml2js": "^0.4.23"
