--- a/package.json
+++ b/package.json
@@ -8,20 +8,14 @@
     "build": "astro build",
     "preview": "astro preview"
   },
-  "devDependencies": {
+  "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.3.0-beta3",
     "@fortawesome/free-brands-svg-icons": "^6.0.0-beta3",
     "@fortawesome/free-regular-svg-icons": "^6.0.0-beta3",
     "@fortawesome/free-solid-svg-icons": "^6.0.0-beta3",
     "@fortawesome/react-fontawesome": "^0.1.16",
-    "@fullhuman/postcss-purgecss": "^4.1.3",
-    "@tsconfig/svelte": "^3.0.0",
-    "@types/react": "^17.0.38",
     "astro": "^0.22.18",
     "autoprefixer": "^10.4.2",
-    "classnames": "^2.3.1",
-    "cloudinary": "^1.28.1",
-    "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
     "luxon": "^2.3.0",
     "petite-vue": "^0.4.1",
@@ -29,13 +23,20 @@
     "postcss-import": "^14.0.2",
     "postcss-import-url": "^7.0.0",
     "postcss-lab-function": "^4.0.3",
+    "svelte": "^3.46.3",
+    "tailwindcss": "^3.0.15"
+  },
+  "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^4.1.3",
+    "@tsconfig/svelte": "^3.0.0",
+    "@types/react": "^17.0.38",
+    "classnames": "^2.3.1",
+    "cloudinary": "^1.28.1",
+    "gray-matter": "^4.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "svelte": "^3.46.3",
-    "tailwindcss": "^3.0.15",
     "turndown": "^7.1.1",
     "xml2js": "^0.4.23"
-  },
-  "dependencies": {}
+  }
 }
