--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "alpinejs": "^3.9.1",
     "autoprefixer": "^10.4.2",
     "petite-vue": "^0.4.1",
     "postcss": "^8.4.7",
