--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,7 @@
   command = "hugo --gc --minify"
   publish = "public"
 
+[build.environment]
   NODE_ENV = "production"
   HUGO_ENV = "production"
   NODE_VERSION = "16"
