--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,13 @@ _site
 .cache
 .env
 
+# Local Netlify/Vercel folders
 .vercel
-
-# Local Netlify folder
 .netlify
 
+
 # build output
+.next
 dist
 
 # dependencies
@@ -32,7 +33,5 @@ yarn-error.log*
 .DS_Store
 
 tmp
-__
-
 resources/*
 .hugo_build.lock
