--- a/package.json
+++ b/package.json
@@ -1,23 +1,45 @@
 {
-  "name": "dd-hugo-2022",
-  "version": "1.0.0",
+  "name": "@ddemaree/website",
+  "version": "22.4.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "alpinejs": "^3.9.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "autoprefixer": "^10.4.2",
+    "classnames": "^2.3.1",
+    "fast-glob": "^3.2.11",
+    "gray-matter": "^4.0.3",
     "juxtaposejs": "^1.1.6",
-    "petite-vue": "^0.4.1",
+    "lodash": "^4.17.21",
+    "luxon": "^2.3.1",
+    "markdown-it": "^12.3.2",
+    "markdown-it-attrs": "^4.1.3",
+    "next": "^12.1.0",
+    "next-mdx-remote": "^4.0.2",
+    "next-seo": "^5.2.0",
     "postcss": "^8.4.7",
     "postcss-cli": "^9.1.0",
     "postcss-import": "^14.0.2",
     "postcss-lab-function": "^4.1.1",
     "postcss-mixins": "^9.0.2",
-    "postcss-nested": "^5.0.6"
+    "postcss-nested": "^5.0.6",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "tailwindcss": "^3.0.23"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
+    "memfs": "^3.4.1",
+    "jest": "^27.5.1",
+    "typescript": "^4.6.3"
   }
 }
