--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@mdx-js/loader": "^2.1.0",
+    "@next/mdx": "^12.1.1",
     "autoprefixer": "^10.4.2",
     "classnames": "^2.3.1",
     "fast-glob": "^3.2.11",
@@ -38,8 +40,8 @@
   "devDependencies": {
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
-    "memfs": "^3.4.1",
     "jest": "^27.5.1",
+    "memfs": "^3.4.1",
     "typescript": "^4.6.3"
   }
 }
