--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@cloudinary/url-gen": "^1.7.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@mdx-js/loader": "^2.1.0",
+    "@mdx-js/react": "^2.1.1",
     "@next/mdx": "^12.1.1",
     "autoprefixer": "^10.4.2",
     "classnames": "^2.3.1",
