--- a/astro/package.json
+++ b/astro/package.json
@@ -9,21 +9,22 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "@astrojs/rss": "^0.2.0",
-    "@astrojs/solid-js": "^0.2.0",
-    "@astrojs/tailwind": "^0.2.1",
+    "@astrojs/mdx": "^0.2.0",
+    "@astrojs/rss": "^0.2.1",
+    "@astrojs/solid-js": "^0.2.1",
+    "@astrojs/tailwind": "^0.2.4",
     "@cloudinary/url-gen": "^1.8.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "astro": "^1.0.0-beta.56",
-    "clsx": "^1.1.1",
+    "astro": "^1.0.0-beta.72",
+    "clsx": "^1.2.1",
     "feed": "^4.2.2",
     "lodash": "^4.17.21",
-    "luxon": "^2.4.0",
-    "solid-js": "^1.3.6"
+    "luxon": "^2.5.0",
+    "solid-js": "^1.4.7"
   },
   "dependencies": {
-    "preact": "^10.7.3"
+    "preact": "^10.10.0"
   }
 }
