Unhide the themes dir

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
   "emmet.excludeLanguages": [],
   "tailwindCSS.emmetCompletions": true,
   "files.exclude": {
-    "**/themes": true
+    "**/resources": true
   },
   "files.watcherExclude": {
     "**/.next": true
