--- a/astro/package.json
+++ b/astro/package.json
@@ -22,6 +22,7 @@
     "feed": "^4.2.2",
     "lodash": "^4.17.21",
     "luxon": "^2.5.0",
+    "postcss-lab-function": "^4.2.1",
     "solid-js": "^1.4.7"
   },
   "dependencies": {
