--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,24 @@ yarn-error.log*
 tmp
 resources/*
 .hugo_build.lock
+
+
+# build output
+dist/
+
+# dependencies
+node_modules/
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+
+# environment variables
+.env
+.env.production
+
+# macOS-specific files
+.DS_Store
