--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,4 @@
-## force pnpm to hoist 
-shamefully-hoist = true
+# Expose Astro dependencies for `pnpm` users
+shamefully-hoist=true
+strict-peer-dependencies=false
+auto-install-peers=true
