--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,15 @@
     "resolveJsonModule": true,
     // Enable stricter transpilation for better output.
     "isolatedModules": true,
-    // Add type definitions for our Vite runtime.
-    "types": ["vite/client"]
+    // Add type definitions for our Astro runtime.
+    "types": ["astro/client"],
+    // Tell TypeScript where your build output is
+    "outDir": "./dist",
+    "baseUrl": ".",
+    "paths": {
+      "@components/*": ["src/components/*"],
+      "@layouts/*": ["src/layouts/*"],
+      "@lib/*": ["src/lib/*"]
+    }
   }
 }
