--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "zx": "^7.1.1"
   },
   "dependencies": {
-    "@astrojs/vercel": "^2.3.1"
+    "@astrojs/vercel": "^2.3.1",
+    "@vercel/og": "^0.0.19"
   }
 }
