--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@tailwindcss/container-queries": "^0.1.0",
     "@tailwindcss/typography": "^0.5.7",
     "@vercel/og": "^0.0.19",
     "astro": "^1.5.2",
