--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
     "@astrojs/tailwind": "^2.1.1",
     "@astrojs/vercel": "^2.3.1",
     "@cloudinary/url-gen": "^1.8.6",
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-brands-svg-icons": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@tailwindcss/container-queries": "^0.1.0",
     "@tailwindcss/typography": "^0.5.7",
     "@vercel/og": "^0.0.19",
     "astro": "^1.5.2",
+    "canvas": "^2.10.2",
     "clsx": "^1.2.1",
+    "domino": "^2.1.6",
     "feed": "^4.2.2",
+    "jsdom": "^20.0.3",
     "lodash": "^4.17.21",
     "luxon": "^3.0.4",
     "postcss-lab-function": "^4.2.1",
