--- a/package.json
+++ b/package.json
@@ -11,33 +11,36 @@
   },
   "author": "David Demaree (david@demaree.me)",
   "dependencies": {
-    "@astrojs/image": "^0.11.4",
-    "@astrojs/mdx": "^0.11.4",
-    "@astrojs/solid-js": "^1.2.1",
-    "@astrojs/tailwind": "^2.1.1",
-    "@astrojs/vercel": "^2.3.1",
-    "@cloudinary/url-gen": "^1.8.6",
+    "@astrojs/image": "^0.11.6",
+    "@astrojs/mdx": "^0.11.6",
+    "@astrojs/solid-js": "^1.2.3",
+    "@astrojs/svelte": "^1.0.2",
+    "@astrojs/tailwind": "^2.1.3",
+    "@astrojs/vercel": "^2.3.6",
+    "@cloudinary/url-gen": "^1.8.7",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@lottiefiles/svelte-lottie-player": "^0.3.0",
     "@tailwindcss/container-queries": "^0.1.0",
-    "@tailwindcss/typography": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.8",
     "@vercel/og": "^0.0.19",
-    "astro": "^1.5.2",
+    "astro": "^1.7.2",
     "canvas": "^2.10.2",
     "clsx": "^1.2.1",
     "domino": "^2.1.6",
     "feed": "^4.2.2",
     "jsdom": "^20.0.3",
     "lodash": "^4.17.21",
-    "luxon": "^3.0.4",
+    "luxon": "^3.1.1",
     "postcss-lab-function": "^4.2.1",
-    "sharp": ">=0.31.0",
-    "solid-js": "^1.5.9",
-    "tailwindcss": "^3.2.1",
+    "sharp": "^0.31.3",
+    "solid-js": "^1.6.6",
+    "svelte": "^3.55.0",
+    "tailwindcss": "^3.2.4",
     "zx": "^7.1.1"
   },
   "devDependencies": {
-    "vercel": "^28.4.12"
+    "vercel": "^28.10.0"
   }
 }
