--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@lottiefiles/svelte-lottie-player": "^0.3.0",
     "@tailwindcss/container-queries": "^0.1.0",
     "@tailwindcss/typography": "^0.5.8",
+    "@vercel/edge": "^0.2.1",
     "@vercel/og": "^0.0.19",
     "astro": "^1.7.2",
     "canvas": "^2.10.2",
