--- a/.npmrc
+++ b/.npmrc
@@ -2,3 +2,6 @@
 shamefully-hoist=true
 strict-peer-dependencies=false
 auto-install-peers=true
+
+@fortawesome:registry=https://npm.fontawesome.com/
+//npm.fontawesome.com/:_authToken=${FONTAWESOME_NPM_AUTH_TOKEN}
