--- a/package.json
+++ b/package.json
@@ -1,44 +1,51 @@
 {
   "name": "@ddemaree/website",
-  "version": "22.7.0",
+  "version": "23.1.0",
   "description": "",
   "private": true,
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "author": "David Demaree (david@demaree.me)",
   "dependencies": {
-    "@astrojs/image": "^0.11.6",
-    "@astrojs/mdx": "^0.11.6",
-    "@astrojs/solid-js": "^1.2.3",
-    "@astrojs/svelte": "^1.0.2",
-    "@astrojs/tailwind": "^2.1.3",
-    "@astrojs/vercel": "^2.3.6",
     "@cloudinary/url-gen": "^1.8.7",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
-    "@lottiefiles/svelte-lottie-player": "^0.3.0",
+    "@fortawesome/pro-regular-svg-icons": "^6.2.1",
+    "@fortawesome/pro-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fortawesome/sharp-solid-svg-icons": "^6.2.1",
+    "@next/font": "13.1.1",
     "@tailwindcss/container-queries": "^0.1.0",
     "@tailwindcss/typography": "^0.5.8",
+    "@types/luxon": "^3.1.0",
+    "@types/node": "18.11.17",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
     "@vercel/edge": "^0.2.1",
     "@vercel/og": "^0.0.19",
-    "astro": "^1.7.2",
-    "canvas": "^2.10.2",
+    "canvas": "^2.11.0",
+    "cheerio": "1.0.0-rc.12",
     "clsx": "^1.2.1",
-    "domino": "^2.1.6",
+    "eslint": "8.30.0",
+    "eslint-config-next": "13.1.1",
     "feed": "^4.2.2",
     "jsdom": "^20.0.3",
     "lodash": "^4.17.21",
     "luxon": "^3.1.1",
+    "next": "13.1.1",
+    "node-loader": "^2.0.0",
     "postcss-lab-function": "^4.2.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "sass": "^1.57.1",
     "sharp": "^0.31.3",
-    "solid-js": "^1.6.6",
-    "svelte": "^3.55.0",
     "tailwindcss": "^3.2.4",
+    "typescript": "4.9.4",
     "zx": "^7.1.1"
   },
   "devDependencies": {
