--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "cleanUrls": true,
+  "devCommand": "next dev",
   "headers": [
     {
       "source": "/(.*)",
