--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@next/font": "13.1.1",
     "@tailwindcss/container-queries": "^0.1.0",
     "@tailwindcss/typography": "^0.5.8",
+    "@types/jsdom": "^20.0.1",
     "@types/luxon": "^3.1.0",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
