--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "luxon": "^3.1.1",
     "next": "13.1.1",
     "node-loader": "^2.0.0",
+    "postcss": "^8.4.20",
     "postcss-lab-function": "^4.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
