--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "cleanUrls": true,
   "devCommand": "next dev",
+  "outputDirectory": null,
   "headers": [
     {
       "source": "/(.*)",
