Fix output directory setting for Next

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "cleanUrls": true,
   "devCommand": "next dev",
-  "outputDirectory": null,
+  "outputDirectory": ".next",
   "headers": [
     {
       "source": "/(.*)",
