--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@next/font": "13.1.1",
     "@tailwindcss/container-queries": "^0.1.0",
     "@tailwindcss/typography": "^0.5.8",
+    "@types/dompurify": "^2.4.0",
     "@types/jsdom": "^20.0.1",
     "@types/luxon": "^3.1.0",
     "@types/node": "18.11.17",
@@ -30,12 +31,14 @@
     "@vercel/edge": "^0.2.1",
     "@vercel/og": "^0.0.19",
     "autoprefixer": "^10.4.13",
-    "canvas": "^2.11.0",
     "cheerio": "1.0.0-rc.12",
     "clsx": "^1.2.1",
+    "domino": "^2.1.6",
+    "dompurify": "^2.4.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "feed": "^4.2.2",
+    "html-react-parser": "^3.0.6",
     "jsdom": "^20.0.3",
     "lodash": "^4.17.21",
     "luxon": "^3.1.1",
@@ -48,10 +51,10 @@
     "sass": "^1.57.1",
     "sharp": "^0.31.3",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.9.4",
-    "zx": "^7.1.1"
+    "typescript": "4.9.4"
   },
   "devDependencies": {
-    "vercel": "^28.10.0"
+    "vercel": "^28.10.0",
+    "zx": "^7.1.1"
   }
 }
