--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tailwindcss/typography": "^0.5.8",
     "@types/dompurify": "^2.4.0",
     "@types/jsdom": "^20.0.1",
+    "@types/lodash": "^4.14.191",
     "@types/luxon": "^3.1.0",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
