--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@vercel/og": "^0.0.19",
     "autoprefixer": "^10.4.13",
     "cheerio": "1.0.0-rc.12",
+    "chroma-js": "^2.4.2",
     "clsx": "^1.2.1",
     "domino": "^2.1.6",
     "dompurify": "^2.4.1",
@@ -45,6 +46,7 @@
     "luxon": "^3.1.1",
     "next": "13.1.1",
     "node-loader": "^2.0.0",
+    "phpunserialize": "^1.3.0",
     "postcss": "^8.4.20",
     "postcss-lab-function": "^4.2.1",
     "react": "18.2.0",
