--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@next/font": "13.1.1",
     "@tailwindcss/container-queries": "^0.1.0",
     "@tailwindcss/typography": "^0.5.8",
+    "@types/chroma-js": "^2.1.4",
     "@types/dompurify": "^2.4.0",
     "@types/jsdom": "^20.0.1",
     "@types/lodash": "^4.14.191",
