--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "clsx": "^1.2.1",
     "domino": "^2.1.6",
     "dompurify": "^2.4.1",
+    "domutils": "^3.0.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "feed": "^4.2.2",
@@ -55,7 +56,8 @@
     "sass": "^1.57.1",
     "sharp": "^0.31.3",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "unicode-substring": "^1.0.0"
   },
   "devDependencies": {
     "vercel": "^28.10.0",
