--- a/package.json
+++ b/package.json
@@ -51,10 +51,12 @@
     "phpunserialize": "^1.3.0",
     "postcss": "^8.4.20",
     "postcss-lab-function": "^4.2.1",
+    "prism-react-renderer": "^1.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.57.1",
     "sharp": "^0.31.3",
+    "shiki": "^0.12.1",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4",
     "unicode-substring": "^1.0.0"
