--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,13 @@
       }
     ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/app/(blog)/_debug/tweets/page.jsx",
+    "src/app/(blog)/_debug/tweets/page.jsx"
+  ],
   "exclude": ["node_modules"]
 }
