--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@types/react-helmet": "^6.1.6",
     "@vercel/edge": "^0.2.1",
     "@vercel/og": "^0.0.19",
     "autoprefixer": "^10.4.13",
@@ -54,6 +55,7 @@
     "prism-react-renderer": "^1.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-helmet": "^6.1.0",
     "sass": "^1.57.1",
     "sharp": "^0.31.3",
     "shiki": "^0.12.1",
