--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,15 +23,16 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "sourceMap": true
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/app/(blog)/_debug/tweets/page.jsx",
-    "src/app/(blog)/_debug/tweets/page.jsx"
+    "src/_app/(blog)/_debug/tweets/page.jsx",
+    "src/_app/(blog)/_debug/tweets/page.jsx"
   ],
   "exclude": ["node_modules"]
 }
