Cleaned up htmlToReact

--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@tailwindcss/container-queries": "^0.1.0",
     "@tailwindcss/typography": "^0.5.8",
     "@types/chroma-js": "^2.1.4",
-    "@types/dompurify": "^2.4.0",
     "@types/jsdom": "^20.0.1",
     "@types/lodash": "^4.14.191",
     "@types/luxon": "^3.1.0",
@@ -37,8 +36,6 @@
     "cheerio": "1.0.0-rc.12",
     "chroma-js": "^2.4.2",
     "clsx": "^1.2.1",
-    "domino": "^2.1.6",
-    "dompurify": "^2.4.1",
     "domutils": "^3.0.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
@@ -58,8 +55,8 @@
     "react-helmet": "^6.1.0",
     "sass": "^1.57.1",
     "sharp": "^0.31.3",
-    "shiki": "^0.12.1",
     "tailwindcss": "^3.2.4",
+    "twitter-api-sdk": "^1.2.1",
     "typescript": "4.9.4",
     "unicode-substring": "^1.0.0"
   },
