--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,21 @@
 {
   "emmet.includeLanguages": {
     "markdown": "markdownreact",
-    "astro-markdown": "html",
     "javascript": "javascriptreact"
   },
   "emmet.excludeLanguages": [],
   "tailwindCSS.emmetCompletions": true,
   "files.exclude": {
+    "**/.next": true,
+    "**/.vercel": true,
     "**/resources": true
   },
   "files.watcherExclude": {
     "**/.next": true
   },
   "typescript.tsdk": "node_modules/.pnpm/typescript@4.9.4/node_modules/typescript/lib",
-  "typescript.enablePromptUseWorkspaceTsdk": true
+  "typescript.enablePromptUseWorkspaceTsdk": true,
+  "search.useGlobalIgnoreFiles": false,
+  "search.useParentIgnoreFiles": true,
+  "explorer.excludeGitIgnore": false
 }
