--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/sharp-solid-svg-icons": "^6.2.1",
     "@next/font": "13.1.1",
+    "@sentry/nextjs": "^7.29.0",
     "@tailwindcss/container-queries": "^0.1.0",
     "@tailwindcss/typography": "^0.5.8",
     "@types/chroma-js": "^2.1.4",
@@ -30,6 +31,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@types/react-helmet": "^6.1.6",
+    "@vercel/analytics": "^0.1.6",
     "@vercel/edge": "^0.2.1",
     "@vercel/og": "^0.0.19",
     "autoprefixer": "^10.4.13",
