--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "author": "David Demaree (david@demaree.me)",
   "dependencies": {
+    "@apollo/client": "^3.7.3",
     "@cloudinary/url-gen": "^1.8.7",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
