--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cheerio": "1.0.0-rc.12",
     "chroma-js": "^2.4.2",
     "clsx": "^1.2.1",
+    "cross-fetch": "^3.1.5",
     "domutils": "^3.0.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
@@ -48,6 +49,8 @@
     "lodash": "^4.17.21",
     "luxon": "^3.1.1",
     "next": "13.1.1",
+    "next-axiom": "^0.16.0",
+    "next-seo": "^5.15.0",
     "node-loader": "^2.0.0",
     "phpunserialize": "^1.3.0",
     "postcss": "^8.4.20",
@@ -64,6 +67,7 @@
     "unicode-substring": "^1.0.0"
   },
   "devDependencies": {
+    "@sentry/cli": "^2.11.0",
     "vercel": "^28.10.0",
     "zx": "^7.1.1"
   }
