--- a/sentry.properties
+++ b/sentry.properties
@@ -1,4 +1,4 @@
 defaults.url=https://sentry.io/
 defaults.org=david-demaree
-defaults.project=javascript-nextjs
+defaults.project=demaree-dot-me
 cli.executable=node_modules/.pnpm/@sentry+cli@1.74.6/node_modules/@sentry/cli/bin/sentry-cli
