--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/lodash": "^4.14.191",
     "@types/luxon": "^3.1.0",
     "@types/node": "18.11.17",
+    "@types/prismjs": "^1.26.0",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@types/react-helmet": "^6.1.6",
@@ -56,11 +57,13 @@
     "postcss": "^8.4.20",
     "postcss-lab-function": "^4.2.1",
     "prism-react-renderer": "^1.3.5",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet": "^6.1.0",
     "sass": "^1.57.1",
     "sharp": "^0.31.3",
+    "shiki": "^0.12.1",
     "tailwindcss": "^3.2.4",
     "twitter-api-sdk": "^1.2.1",
     "typescript": "4.9.4",
