--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/pro-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/sharp-solid-svg-icons": "^6.2.1",
+    "@next/bundle-analyzer": "^13.1.2",
     "@next/font": "13.1.1",
     "@sentry/nextjs": "^7.29.0",
     "@tailwindcss/container-queries": "^0.1.0",
