--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ddemaree/website",
-  "version": "22.7.0",
+  "version": "23.1.0",
   "description": "",
   "private": true,
   "scripts": {
@@ -13,35 +13,53 @@
   "dependencies": {
     "@astrojs/image": "^0.11.6",
     "@astrojs/mdx": "^0.11.6",
+    "@astrojs/react": "^1.2.2",
     "@astrojs/solid-js": "^1.2.3",
     "@astrojs/svelte": "^1.0.2",
     "@astrojs/tailwind": "^2.1.3",
-    "@astrojs/vercel": "^2.3.6",
+    "@astrojs/vercel": "^2.4.0",
     "@cloudinary/url-gen": "^1.8.7",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/pro-regular-svg-icons": "^6.2.1",
+    "@fortawesome/pro-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fortawesome/sharp-solid-svg-icons": "^6.2.1",
     "@lottiefiles/svelte-lottie-player": "^0.3.0",
     "@tailwindcss/container-queries": "^0.1.0",
-    "@tailwindcss/typography": "^0.5.8",
-    "@vercel/edge": "^0.2.1",
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
+    "@vercel/edge": "^0.2.6",
     "@vercel/og": "^0.0.19",
-    "astro": "^1.7.2",
-    "canvas": "^2.10.2",
+    "astro": "^1.9.2",
+    "canvas": "^2.11.0",
+    "chroma-js": "^2.4.2",
     "clsx": "^1.2.1",
     "domino": "^2.1.6",
     "feed": "^4.2.2",
     "jsdom": "^20.0.3",
     "lodash": "^4.17.21",
-    "luxon": "^3.1.1",
+    "luxon": "^3.2.1",
+    "phpunserialize": "^1.3.0",
+    "postcss": "^8.4.21",
     "postcss-lab-function": "^4.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sass": "^1.57.1",
     "sharp": "^0.31.3",
-    "solid-js": "^1.6.6",
-    "svelte": "^3.55.0",
+    "solid-js": "^1.6.9",
+    "svelte": "^3.55.1",
     "tailwindcss": "^3.2.4",
+    "twitter-api-sdk": "^1.2.1",
     "zx": "^7.1.1"
   },
   "devDependencies": {
-    "vercel": "^28.10.0"
+    "@types/chroma-js": "^2.1.4",
+    "@types/jsdom": "^20.0.1",
+    "@types/lodash": "^4.14.191",
+    "@types/luxon": "^3.2.0",
+    "vercel": "^28.12.4"
   }
 }
