--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "23.1.0",
   "description": "",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
