WIP - styling on Next site (but is ssr working?)

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/sharp-solid-svg-icons": "^6.2.1",
     "@nanostores/react": "^0.4.1",
+    "@next/mdx": "^13.2.4",
     "@tailwindcss/container-queries": "^0.1.0",
     "@tailwindcss/typography": "^0.5.8",
     "@types/lodash": "^4.14.191",
@@ -42,6 +43,7 @@
     "hast-util-select": "^5.0.5",
     "hast-util-to-text": "^3.1.2",
     "hastscript": "^7.2.0",
+    "html-entities": "^2.3.3",
     "lodash": "^4.17.21",
     "luxon": "^3.1.1",
     "nanostores": "^0.7.4",
