--- a/package.json
+++ b/package.json
@@ -20,15 +20,10 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/sharp-solid-svg-icons": "^6.2.1",
     "@headlessui/react": "^1.7.13",
-    "@nanostores/react": "^0.4.1",
     "@next/mdx": "^13.2.4",
     "@popperjs/core": "^2.11.7",
     "@tailwindcss/container-queries": "^0.1.0",
     "@tailwindcss/typography": "^0.5.8",
-    "@types/lodash": "^4.14.191",
-    "@types/luxon": "^3.1.0",
-    "@types/mdx": "^2.0.3",
-    "@types/react-dom": "18.0.10",
     "@vercel/edge": "^0.2.1",
     "@vercel/og": "^0.0.19",
     "@wordpress/block-library": "^8.7.0",
@@ -52,7 +47,6 @@
     "html-entities": "^2.3.3",
     "lodash": "^4.17.21",
     "luxon": "^3.1.1",
-    "nanostores": "^0.7.4",
     "next": "13.3.0",
     "postcss": "^8.4.20",
     "postcss-lab-function": "^4.2.1",
@@ -78,8 +72,13 @@
     "@types/chroma-js": "^2.4.0",
     "@types/fontfaceobserver": "^2.1.0",
     "@types/node": "18.15.3",
+    "@types/postcss-js": "^4.0.0",
     "@types/react": "18.0.26",
     "@types/twitter-text": "^3.1.5",
+    "@types/lodash": "^4.14.191",
+    "@types/luxon": "^3.1.0",
+    "@types/mdx": "^2.0.3",
+    "@types/react-dom": "18.0.10",
     "@vitejs/plugin-react": "3.1.0",
     "jsdom": "^21.1.1",
     "prettier": "^2.8.7",
