Moved rewrites/redirects to vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -12,5 +12,27 @@
         }
       ]
     }
+  ],
+  "redirects": [
+    {
+      "source": "/p/:slug",
+      "destination": "/post/:slug",
+      "permanent": false
+    },
+    {
+      "source": "/p/okrs-the-complete-guide",
+      "destination": "/2023/okrs-the-complete-guide",
+      "permanent": false
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/.well-known/webfinger",
+      "destination": "/api/webfinger"
+    },
+    {
+      "source": "/_preview/:parentId/:id/:type/:status/:nonce",
+      "destination": "/_preview?parent=:parentId&id=:id&type=:type&status=:status&n=:nonce"
+    }
   ]
 }
