--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "hast-util-from-html": "^1.0.1",
     "hast-util-is-javascript": "^2.0.0",
     "hast-util-select": "^5.0.5",
+    "hast-util-to-html": "^8.0.4",
     "hast-util-to-text": "^3.1.2",
     "hastscript": "^7.2.0",
     "html-entities": "^2.3.3",
@@ -74,6 +75,7 @@
     "sharp": "^0.32.0",
     "shiki": "^0.14.1",
     "tailwindcss": "^3.3.1",
+    "twitter-api-sdk": "^1.2.1",
     "twitter-text": "^3.1.0",
     "unified": "^10.1.2",
     "unist-util-select": "^4.0.3",
