Clean up and simplify

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
     "src/**/*.astro",
     "src/types/**/*.ts"
   ],
-  "exclude": ["node_modules", ".astro", "dist"]
+  "exclude": ["node_modules", ".astro", "dist", ".vercel"]
 }
