--- a/package.json
+++ b/package.json
@@ -94,6 +94,8 @@
     "dotenv": "^16.0.3",
     "gray-matter": "^4.0.3",
     "jsdom": "^21.1.1",
+    "new-component": "^5.0.2",
+    "prettier": "^2.8.8",
     "prettier-plugin-astro": "^0.8.0",
     "prettier-plugin-css-order": "^1.3.0",
     "prettier-plugin-tailwindcss": "^0.2.7",
