lots of changes

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,8 +5,8 @@
       "type": "npm",
       "script": "dev",
       "problemMatcher": [],
-      "label": "npm: dev",
-      "detail": "next dev"
+      "label": "pnpm: dev",
+      "detail": "pnpm dev"
     }
   ]
 }
